--- a/styles/index/style.css
+++ b/styles/index/style.css
@@ -166,6 +166,7 @@ section, footer {
   text-align: right;
   cursor: help;
   width: 100%;
+  z-index: 10;
 }
 .modules__description_left {
   text-align: left;
@@ -191,7 +192,6 @@ section, footer {
   width: 40%;
   height: 100px;
   background-color: rgb(151, 84, 206);
-  padding: 0 10px;
   border-radius: 20px;
   display: flex;
   justify-content: center;
@@ -202,6 +202,7 @@ section, footer {
   width: 100%;
   height: 100%;
   color: white;
+  padding: 0 15px;
   display: flex;
   align-items: center;
   justify-content: center;
