--- a/styles/index/style.scss
+++ b/styles/index/style.scss
@@ -149,6 +149,7 @@ section, footer {
         text-align: right;
         cursor: help;
         width: 100%;
+        z-index: 10;
         &_left {
             text-align: left;
         }
@@ -173,7 +174,6 @@ section, footer {
             width: 40%;
             height: 100px;
             background-color: rgb(151, 84, 206);
-            padding: 0 10px;
             border-radius: 20px;
             display: flex;
             justify-content: center;
@@ -183,6 +183,7 @@ section, footer {
                 width: 100%;
                 height: 100%;
                 color: white;
+                padding: 0 15px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -230,148 +231,4 @@ section, footer {
     }
 }
 
-@media screen and (max-width: 1400px)
-{
-    .modules {
-        .wrapper {
-            width: 90%;
-        }
-        &__description {
-            font-size: 15px;
-        }
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .modules {
-        .wrapper {
-            width: 70%;
-            flex-direction: column;
-        }
-        .shield {
-            position: absolute;
-            opacity: 0.1;
-        }
-        &__description {
-            width: 60%;
-            font-size: 18px;
-            margin: 25px 0;
-            text-align: center;
-        }
-    }
-    .starting {
-        &__description {
-            font-size: 19px;
-            width: 80%;
-        }
-        &__buttons {
-            width: 100%!important;
-            &-item {
-                height: 67px!important;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 992px)
-{
-    .contact {
-        &__description {
-            font-size: 18px;
-        }
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .about {
-        height: 490px;
-        &__description {
-            font-size: 19px;
-        }
-    }
-    .modules {
-        &__description {
-            width: 81%;
-        }
-    }
-    .contact {
-        .wrapper {
-            width: 85%;
-        }
-        &__telegram__icon {
-            width: 25%;
-        }
-    }
-    .footer {
-        .wrapper {
-            width: 100%;
-        }
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .header {
-        height: 130px;
-        &__wrapper {
-            flex-direction: column;
-            justify-content: center;
-            &-item {
-                display: flex;
-                justify-content: center;
-                margin: 2px 0;
-            }
-        }
-    }
-    .about {
-        height: 650px;
-        &__description {
-            font-size: 16px;
-        }
-    }
-    .modules {
-        height: 640px;
-        &__description {
-            width: 100%;
-            font-size: 16px;
-            margin: 12px 0;
-            a {
-                font-size: 17px;
-            }
-        }
-        .shield {
-            width: 100%;
-        }
-    }
-    .starting {
-        &__description {
-            font-size: 16px;
-            width: 100%;
-        }
-        &__buttons {
-            flex-direction: column;
-            &-item {
-                width: 100%!important;
-                margin-top: 16px;
-            }
-        }
-    }
-    .contact {
-        height: 500px;
-        &__telegram__icon {
-            width: 32%;
-        }
-        &__description {
-            width: 100%;
-            font-size: 17px;
-            a {
-                font-size: 16
-            }
-        }
-    }
-    .footer {
-        &__text {
-            font-size: 15px;
-        }
-    }
-}
-
+@import 'media.scss';
