--- a/styles/index/style.scss
+++ b/styles/index/style.scss
@@ -165,6 +165,7 @@ section, footer {
             justify-content: center;
             align-items: center;
             transition: background-color 0.3s;
+            cursor: pointer;
             a {
                 width: 100%;
                 height: 100%;
