--- a/styles/index/style.scss
+++ b/styles/index/style.scss
@@ -48,6 +48,7 @@ body {
 .link {
     color: rgb(160, 227, 236);
     transition: color 0.3s;
+    cursor: pointer;
     &:hover {
         color: rgb(182, 126, 228);
     }
